# fetch-sitemap

./: .gitignore  LICENSE  README.md  fetch-sitemap.py  pyproject.toml  release.sh  tests.sh  tox.ini
fetch_sitemap/: __init__.py  datastructures.py  fetch.py
tests/: conftest.py  test_base_arguments.py  test_error_response.py  test_sitemap.py  test_sitemap_output_dir.py  test_sitemapindex.py
